fix: decrease gap between tabs

--- a/assets/style.css
+++ b/assets/style.css
@@ -386,7 +386,7 @@ form:valid #select {
 
 #tabs {
     display: flex;
-    gap: 0.5em;
+    gap: 0.1em;
     padding-bottom: 0.5em;
 }
 
